Fix spacing in news items

--- a/src/scss/pages/_newsfeed.scss
+++ b/src/scss/pages/_newsfeed.scss
@@ -1,3 +1,12 @@
+.newsfeed {
+    > article {
+        margin-bottom: 2em;
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+    }
+}
+
 .newsfeed-element {
     display: grid;
     grid-template-columns: 33% 66%;
@@ -32,7 +41,7 @@
         img {
             width: 100%;
             height: auto;
-            
+
             border-radius: $borderRadius;
         }
     }
@@ -74,10 +83,5 @@
                 }
             }
         }
-    }
-
-    margin-bottom: 2em;
-    &:last-of-type {
-        margin-bottom: 0;
     }
 }
